# visualizer

./: CMakeLists.txt  README.md
models/: Subaru_Impreza_WRX_STI_2004.stl
src/: interactor_style.cpp  interactor_style.h  main.cpp  renderer.cpp  renderer.h  scene_manager.cpp  scene_manager.h  stlreader.cpp  stlreader.h
